Add meal plan and completed search.  All routing complete

--- a/recipe-finder/src/pages/Search.css
+++ b/recipe-finder/src/pages/Search.css
@@ -10,3 +10,11 @@ ion-toolbar{
   --background: transparent;
   background-color: aqua;
 }
+
+.recipeTitle{
+  text-align: center;
+}
+
+.randomTitle{
+  padding-right: 75px;
+}
